# European_Soccer_EDA_XGBoost_Pipeline

./: .gitignore  README.md  config.py  main.py  pyproject.toml  sports.ipynb  utils.py
notebooks/: match_predict.ipynb  modeling_table.ipynb  soccer_eda.ipynb
