[project]
name = "sports-project"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "ipython-sql>=0.5.0",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.45",
    "supertree>=0.5.5",
    "xgboost>=3.1.2",
]
[tool.uv]
package = false